#0,1,0,20211210
	'Select Camera' Operator issue fixed for scene without Camera.
	Show types toggle keys added to pose mode (Max mode).

#0,1,0,20211128
	Draw object on master collection in Blender 3.0 problem solved.
	Convert to operator issue with some modifiers fiexed.
	Code review and some clean up and arangment.

#0,1,0,20211107
	save_preferences issu fixed for Blender 3.0
	'Shift+M' call collection Menu (Max mode) (replacment for 'M' that used for Material Editor).
	'Path Constraint' by default set keys type as Linear.
	'Ctrl+S' in text editor Save text if external Save blend file if internal (Max Mode).
	'Shift+V' Preview Menu (Max Mode).

#0,1,0,20211013
	New Create Primitive operator for draw object on surface.
	Note: for now just Applyed for objects without width and length parameter.

#0,1,0,20211006
	Camera target and FOV create in same collection as the camera is.
	Backburner submitter works on Mac (thanks to CalvinAndHobbies).

#0,1,0,20210915
	Backburner submitter`s double first frame issue fixed.
	New 'Premiere' keyspap added for VSE addes (BsMax/Custom/Video sequencer)
	VSE 'Alt + Arrow' keys Move active Strip (like in premire) (Max and Premiere Mode)
	VSE 'H' Mute/Unmute toggle (Max and Premiere Mode)
	Maxscript folder added, will contain some tools. for now trasfer Camera + Keyframes from 3DsMax to Blender.

#0,1,0,20210905
	Experimental 'Autogrid' added for Create primitive operator..

#0,1,0,20210903
	Spiderweb polished and some bugfiex (Create Bitmap not working yet disabled for now).
	Set soft limit for some of SpiderWeb creator parameters to avoid crashing.

#0,1,0,20210902
	The Abandoned SpiderWeb tool from "Maxime Herpin" updated to work with Blender 2.80+ and add as an operator to BsMax (Draw lines with anotation then Create/Mesh/Extera/SpiderWeb).
	Note: SpiderWeb tool is buggy but works for most cases. Don't worry about Bugs all will be fix soon.

#0,1,0,20210830
	Backburner submiter -1_end and miss last frame bug fixed.